Provisioning and instructions corrections - correction to the instructions to reflect new folder structure - correction to provisioning script to ensure `vagrant` user permissions over cq-author jar file